--- a/src/styles/Home/home.css
+++ b/src/styles/Home/home.css
@@ -1,69 +1,187 @@
 #home {
-  height         : 80vh;
-  padding        : var(--paddingLateral);
-  display        : flex;
-  flex-direction : column;
-  align-items    : center;
-  justify-content: center;
+    display        : flex;
+    flex-direction : column;
+    justify-content: space-around;
+    align-items    : center;
+    padding        : var(--paddingMobileLateral);
+    height         : 100vh;
+    padding-top    : 10vh;
 }
 
-.home__section-1 {
-  display        : flex;
-  justify-content: space-between;
-  align-items    : center;
-  gap            : 8%;
-  height         : 80%;
-  width          : 100%;
+.home__name {
+    text-align: center;
 }
 
-.home__paragraph {
-  font-size: calc(var(--paragraphSize) - 5px);
-  width    : 263px;
+
+.home__subtitle {
+    font-size     : var(--fontSizeSubTitle-M);
+    text-transform: uppercase;
+    font-weight   : 100;
+    line-height   : 1;
+
 }
 
-.home__paragraph-2 {
-  text-align: end;
+.home__title {
+    font-size     : var(--fontSizeTitle-M);
+    text-transform: uppercase;
+    font-weight   : 900;
+    line-height   : 1;
 }
 
-.home__logo-circle {
-  display        : flex;
-  align-items    : center;
-  justify-content: center;
-  height         : clamp(300px, 443px, 470px);
-  width          : clamp(300px, 443px, 470px);
-  border         : 37px white solid;
-  border-radius  : 50%;
-  animation: bright infinite 3s alternate;
+.home__brand {
+    height  : 195px;
+    width   : 195px;
+    position: relative;
 }
 
-@keyframes bright {
-  0% {
-    box-shadow: 0 0 25px 1px white, inset 0 0 25px 1px white;
-  }
-  100%{
-    box-shadow: 0 0 25px 5px white, inset 0 0 25px 5px white;
-  }
+.home__brand-circle {
+    height       : 100%;
+    width        : 100%;
+    border       : solid var(--mainColor) 20px;
+    border-radius: 50%;
+    position     : absolute;
+    z-index      : -1;
+    box-shadow   : inset 0 0 10px, 0 0 15px;
 }
 
-.home__Drakode {
-  height: 105%;
-  width : 105%;
+.home-brand-drakode {
+    position        : absolute;
+    top             : 50%;
+    left            : 55%;
+    transform       : translate(-50%, -50%);
+    transform-origin: center;
+    height          : 75%;
+    z-index         : -1;
 }
 
-.home__section-2 {
-  text-align: center;
+.home__info {
+    text-align    : center;
+    font-size     : var(--fontSizeParagraph-M);
 }
 
-.home__profession {
-  font-size     : var(--paragraphSize);
-  text-transform: uppercase;
-  font-weight   : 900;
-  line-height   : 1;
+.home__info-text--1 {
+    display: none;
+
 }
 
-.home__nickname {
-  font-size     : var(--titleSize);
-  text-transform: uppercase;
-  font-weight   : 900;
-  line-height   : 1;
+.home__next {
+    width     : 100%;
+    text-align: center;
+    position  : relative;
+    height    : 28px;
+}
+
+.home__next-circle--1 {
+    /* height          : 28px;
+    width              : 28px; */
+    position        : absolute;
+    z-index         : -1;
+    left            : 50%;
+    top             : 50%;
+    transform       : translate(-50%, -50%);
+    transform-origin: center;
+    border-radius   : 50%;
+    box-shadow      : 0 0 1px var(--mainColor);
+    animation       : glow 1s infinite steps(8);
+}
+
+@keyframes glow {
+
+    0% {
+        height    : 25px;
+        width     : 25px;
+        box-shadow: 0px 0px 1px var(--mainColor), inset 0 0 1px;
+    }
+
+    50% {
+        height    : 38px;
+        width     : 38px;
+        box-shadow: 0 0 10px var(--mainColor), inset 0 0 5px;
+        opacity   : 0.5;
+    }
+
+    100% {
+        height    : 48px;
+        width     : 48px;
+        box-shadow: 0 0 15px var(--mainColor), inset 0 0 10px;
+        opacity   : 0;
+    }
+
+}
+
+.home__arrow {
+    height  : 28px;
+    width   : 28px;
+    color   : var(--mainColor);
+    position: relative;
+
+}
+
+.home__arrow:hover {
+    cursor          : pointer;
+    background-color: var(--mainColor);
+    border-radius   : 50%;
+    box-shadow      : 0px 0px 10px var(--mainColor);
+}
+
+.home__arrow:hover path {
+    fill: var(--bg-Color-body);
+}
+
+
+/* Versión desktop */
+@media screen and (min-width: 1200px) {
+
+    #home {
+        padding    : var(--paddingDesktopLateral);
+        padding-top: 10vh;
+        align-items: end;
+    }
+
+    .home__subtitle {
+        font-size  : var(--fontSizeSubTitle-D);
+        line-height: 1;
+
+    }
+
+    .home__title {
+        font-size  : var(--fontSizeTitle-D);
+        line-height: 0.8;
+        transform  : translate(-4px);
+    }
+
+    .home__name {
+        width     : 100%;
+        text-align: left;
+    }
+
+    .home__brand {
+        display: none;
+    }
+
+    .home__info {
+        text-align: end;
+        font-size : var(--fontSizeParagraph-D);
+        width     : 498px;
+        height    : 214px;
+
+    }
+
+    .home__info-text--1 {
+        display      : block;
+        margin-bottom: 28px;
+    }
+
+    .home__info-message {
+        left     : 100%;
+        transform: translate(-100%);
+        font-size: var(--fontSizeBtn-D);
+        width    : 196px;
+        height   : 52px;
+        gap      : 23px;
+    }
+
+    .home__info-icon {
+        height: 22px;
+    }
 }
