--- a/src/styles/Projects/projects.css
+++ b/src/styles/Projects/projects.css
@@ -1,64 +1,148 @@
 #projects {
-    height: 80vh;
-    color: #FFFFFF;
-    display: flex;
+    padding: var(--paddingMobileLateral);
+    margin-bottom: 40px;
+}
+
+.projects__title {
+    font-size     : var(--fontSizeTitleSecction-M);
+    text-transform: uppercase;
+    font-weight   : 600;
+}
+
+.projects__select {
+    background-color: transparent;
+    border          : none;
+    font-size       : 13px;
+    outline         : none;
+    position        : relative;
+    left            : -4px;
+    font-weight     : 200;
+    margin-bottom   : 20px;
+}
+
+option {
+    background-color: var(--bg-Colore-Btn2);
+    color           : var(--mainColor);
+    font-size       : 12px;
+    border          : none;
+    border-radius   : 0;
+}
+
+.projects__list {
+    display: none;
+}
+
+
+.projects__image-active {
     justify-content: center;
-    align-items: center;
+    width          : 100%;
+    max-width      : 500px;
+    border-radius  : 10px;
 }
 
-.projects__content {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 10px;
+.projects__image a {
+    text-decoration: none;
 }
 
-.projects__item {
-    max-width: 302px;
-    min-height: 193px;
+.projects__technologies,
+.projects__date {
+    display       : flex;
+    flex-direction: column;
+
+    gap    : 10px;
+    padding: 15px;
+}
+
+.projects__tech-buttons {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative; /* Necesario para posicionar tools y veil */
+    width: 100%;
+    flex-wrap: wrap;
+    gap    : 8px 20px;
 }
 
-.projects__veil {
-    width: 302px;
-    height: 198px;
-    position: absolute;
-    background-color: rgb(2, 2, 2);
-    opacity: 0;
-    transition: all ease-in-out 1s;
+@media screen and (min-width: 1200px) {
+    #projects {
+        padding: var(--paddingDesktopLateral);
 
-        pointer-events: none;
+    }
 
-}
+    .projects__content {
+        display        : flex;
+        width          : 100%;
+        justify-content: space-between;
+    }
 
-.projects__item:hover .projects__veil {
-    opacity: 0.5;
-}
+    .projects__title {
+        font-size    : var(--fontSizeTitleSecction-D);
+        margin-bottom: 48px;
+    }
 
-.projects__item:hover .projects__image-wrapper {
-    filter: blur(2px);
-    transition: all 0.3s;
-}
+    .projects__select {
+        display: none;
+    }
 
-.projects__tools {
-    opacity: 0;
-    position: absolute;
-    display: flex;
-    gap: 2%;
-    transition: all 0.5s;
-    justify-content: center;
-}
+    .projects__list {
+        display   : block;
+        position  : relative;
+        left      : 2px;
+        list-style: none;
+        cursor    : pointer;
+    }
 
-.projects__item:hover .projects__tools {
-    opacity: 1;
-}
+    .projects__list li {
+        font-size    : var(--fontSizeBtn-D);
+        color        : var(--mainColor);
+        margin-bottom: 12px;
+        transition   : all 0.5s ease;
+    }
 
-.projects__tool-icon {
-    height: 55px;
-    border:  3px solid white;
-    border-radius: 15px;
-    padding: 5px;
+    .projects__list svg {
+        margin-right: 8px;
+        transition  : all 0.5s ease;
+    }
+
+    .projects__list .inactivo svg {
+        transform: rotate(-45deg);
+    }
+
+    .projects__list .inactivo {
+        font-weight: 300;
+        color      : #c8c8c8;
+    }
+
+    .projects__list .activo {
+        font-weight: 600;
+        position   : relative;
+        left       : 15px;
+    }
+
+    .projects__image-active {
+        width        : 100%;
+        max-width    : 972px;
+        border-radius: 10px;
+    }
+
+    .projects__technologies,
+    .projects__date {
+        display    : flex;
+        gap        : 10px;
+        align-items: center;
+        flex-direction: row;
+        padding    : 15px;
+    }
+
+    .projects__tech-buttons {
+        display: flex;
+        gap    : 20px;
+    }
+
+    .projects__image {
+        position: relative;
+    }
+
+    .projects__description {
+        position: absolute;
+        bottom  : 30%;
+        left    : 15%;
+    }
 }
