--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -1,37 +1,37 @@
 #footer {
-    border-top: 2px #ffffff5c solid;
-    display   : flex;
-    padding   : var(--paddingLateral);
+    text-align: center;
+    padding   : 20px 0;
+    
+}
 
-    justify-content: space-between;
+.footer__options {
+    display        : flex;
+    justify-content: center;
     align-items    : center;
-    height         : 10vh;
-
+    gap            : 5px;
+    flex-direction : column;
 }
 
-.info {
-    width          : 862px;
+.info__option {
+    font-weight    : 400;
+    font-size      : var(--fontSizeSubTitle-M);
     display        : flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items    : center;
 
 }
 
-.social {
-    width          : 181px;
-    display        : flex;
-    justify-content: flex-end;
-    gap            : 10%;
+@media screen and (min-width: 1200px) {
+    #footer {
+        padding: var(--paddingDesktopLateral);
+        height: 5vh;
+    }
 
-}
-
-.option {
-    color          : #FFFFFF;
-    text-decoration: none;
-    font-size      : 15px;
-    text-align     : center;
-
-}
-
-.social__option {
-    width: auto;
+    .footer__options {
+        display        : flex;
+        justify-content: space-between;
+        align-items    : center;
+        gap            : 5px;
+        flex-direction : row;
+    }
 }
