--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,41 +1,137 @@
 #header {
-    font-weight: 600;
-
-    height : 10%;
-    padding: var(--paddingLateral);
-
-    height: 10vh;
-
-    display        : flex;
-    align-items    : center;
-    justify-content: space-between;
-
-
-    border-bottom: 2px #ffffff5c solid;
-
-
+  height          : 10vh;
+  display         : flex;
+  align-items     : center;
+  justify-content : space-between;
+  padding         : var(--paddingMobileLateral);
+  border-bottom   : 2px solid #ffffff;
+  position        : fixed;
+  width           : 100%;
+  background-color: var(--bg-Color-body);
+  z-index: 1000;
 }
 
-.nav {
-    width: 50%;
-
-    position       : relative;
-    display        : flex;
-    justify-content: space-between;
-
-
-
+.header__logo {
+  width: 26px;
 }
 
-.nav__element,
-.home__link {
-    color          : #ffffff;
-    text-decoration: none;
+.header__burguerMenu {
+  position       : relative;
+  z-index        : 100;
+  height         : 30px;
+  width          : 30px;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+  cursor         : pointer;
+}
 
-    padding: 0 5px;
+.header__burguerMenu-icon {
+  position        : relative;
+  height          : 2px;
+  width           : 30px;
+  background-color: aliceblue;
+  display         : block;
+  transition      : background-color 0.3s ease;
+}
 
-    &:hover {
-        color           : #080C25;
-        background-color: #FFFFFF;
-    }
+.header__burguerMenu-icon::before,
+.header__burguerMenu-icon::after {
+  content         : "";
+  position        : absolute;
+  height          : 2px;
+  width           : 30px;
+  background-color: aliceblue;
+  left            : 0;
+  border-radius   : 2px;
+  transition      : transform 0.3s ease, top 0.3s ease, opacity 0.3s ease;
+}
+
+.header__burguerMenu-icon::before {
+  top: -8px;
+}
+
+.header__burguerMenu-icon::after {
+  top: 8px;
+}
+
+.header__burguerMenu-icon.is-active {
+  background-color: transparent;
+}
+
+.header__burguerMenu-icon.is-active::before {
+  transform: rotate(45deg);
+  top      : 0;
+}
+
+.header__burguerMenu-icon.is-active::after {
+  transform: rotate(-45deg);
+  top      : 0;
+}
+
+.header__nav {
+  padding         : 11vh 28px;
+  display         : flex;
+  gap             : 28px;
+  flex-direction  : column;
+  align-items     : start;
+  background-color: #C93356;
+  position        : absolute;
+  top             : 0;
+  right           : 0;
+  height          : 100vh;
+  width           : 50vw;
+  transition      : transform 0.3s ease-in-out;
+  transform       : translate(100%);
+  z-index         : 99;
+}
+
+.header__nav--visible {
+  transform: translate(0);
+}
+
+.header__nav-item {
+  text-decoration: none;
+  padding        : 4px;
+  width          : 100%;
+  font-weight    : 700;
+  font-size      : 1rem;
+}
+
+.header__nav-item:active {
+  background-color: #ffffff;
+  color           : #C93356;
+}
+
+/* Versión desktop */
+@media screen and (min-width: 1200px) {
+  #header {
+    padding: var(--paddingDesktopLateral);
+  }
+
+  .header__burguerMenu {
+    display: none;
+  }
+
+  .header__nav {
+    padding         : 0;
+    display         : flex;
+    gap             : 9%;
+    flex-direction  : row;
+    justify-content : flex-end;
+    align-items     : center;
+    background-color: transparent;
+    position        : static;
+    height          : 10vh;
+    width           : 100%;
+    transform       : translate(0);
+  }
+
+  .header__nav-item {
+    width: auto;
+  }
+
+  /* .header__nav-desktop{
+    display: none;
+  } */
 }
