--- a/src/styles/Projects/projects.css
+++ b/src/styles/Projects/projects.css
@@ -48,26 +48,23 @@ option {
 
 .projects__technologies,
 .projects__date {
-    display       : flex;
-    flex-direction: column;
-    gap           : 10px;
-    padding       : 15px;
+    display        : flex;
+    flex-direction : column;
+    gap            : 10px;
     justify-content: center;
 }
 
-
-.projects__date h3,
-.projects__date p {
-    font-size  : var(--fontSizeParagraph-M);
-    font-weight: 400;
-}
-
 .projects__technologies h3,
-.projects__technologies p {
-    font-size  : var(--fontSizeParagraph-M);
+.projects__date h3 {
     font-weight: 400;
+    font-size  : var(--fontSizeParagraph-M);
 }
 
+.projects__technologies p,
+.projects__date p {
+    font-size  : 12px;
+    font-weight: 200;
+}
 
 
 .projects__tech-buttons {
@@ -78,17 +75,15 @@ option {
 }
 
 .projects__info {
-    background-color: rgb(38, 42, 40);
-    text-align: left;
-    padding: 0;
-
+    display       : flex;
+    flex-direction: column;
+    gap           : 10px;
 }
 
 
 @media screen and (min-width: 1200px) {
     #projects {
         padding: var(--paddingDesktopLateral);
-
     }
 
     .projects__content {
@@ -172,9 +167,7 @@ option {
     }
 
     .projects__info {
-        display         : flex;
-        background-color: aquamarine;
-
+        display: flex;
     }
 
     .projects__technologies,
@@ -183,6 +176,24 @@ option {
         flex-direction: row;
         gap           : 10px;
         padding       : 15px;
+    }
+
+    .projects__technologies h3,
+    .projects__date h3 {
+        font-weight: 400;
+        font-size  : var(--fontSizeParagraph-M);
+    }
+
+    .projects__technologies p,
+    .projects__date p {
+        font-size  : var(--fontSizeBtn-D);
+        font-weight: 200;
+    }
+
+    .projects__info {
+        display       : flex;
+        flex-direction: row;
+        gap           : 10px;
     }
 
 }
